<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/hi"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="@dimen/font_large" />

        <ImageView
            android:layout_width="@dimen/clock_width"
            android:layout_height="@dimen/clock_height"
            android:layout_marginTop="@dimen/margin_4"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/darker_bg_border_bottom_white"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_open"
            style="@style/CustomButton.Drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_wifi"
            android:enabled="false"
            android:text="@string/action_open_door"
            android:textAllCaps="false"
            android:textSize="@dimen/font_medium" />

        <CheckBox
            android:id="@+id/chk_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/mark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/darker_bg_border_bottom_white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4"
            android:layout_marginRight="@dimen/margin_4"
            android:drawablePadding="@dimen/padding_4"
            android:drawableRight="@drawable/ic_nfc"
            android:text="@string/action_open_door_nfc"
            android:textSize="@dimen/font_medium" />

    </LinearLayout>

</LinearLayout>
